welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	def ordre(a:Int, b:Int, c:Int):Boolean = {
		return true
	}
	if (!equalOK) {
		if (a==b || a==c || b==c) {return false}
	}
	return ordre(a,b,c)
}
